add tests redone